--- a/src/scss/layout/_heading.scss
+++ b/src/scss/layout/_heading.scss
@@ -4,7 +4,7 @@
   --fs-title: clamp(1rem, calc(0.5rem + 3.5vw), 5rem);
   --fs-score: clamp(0.5rem, calc(0.5rem + 0.65vw), 1rem);
   --fs-score-points: clamp(1.5rem, calc(1rem + 7vw), 5rem);
-  width: clamp(10rem, 100%, 45rem);
+  width: min(100%, 45rem);
   display: flex;
   justify-content: space-between;
   align-items: center;
