--- a/src/scss/layout/_results.scss
+++ b/src/scss/layout/_results.scss
@@ -1,8 +1,18 @@
+@use '../abstracts/breakpoints' as brk;
+
 .results {
+  --btn-size: min(75%, 25rem);
+  width: 100%;
   text-align: center;
   position: relative;
   transform: translateY(-40%);
   animation: fade-in 200ms ease forwards;
+  @include brk.minWidth(medium) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
   &__title {
     font-size: clamp(2.5rem, calc(1rem + 11vw), 5rem);
@@ -10,7 +20,7 @@
   }
 
   .btn {
-    width: 75%;
+    width: var(--btn-size);
   }
 }
 
